- New approach to loading relative filenames:   - added the ASM Toolkit for Bytecode Manipulation   - added implementation to DVBClassLoader which does dynamic     bytecode manipulation on the relevant classes from java.io   - added the PathConverter class as the central place to     point relative path names to the carousel base path     of applications   - the constructors of the classes from java.io which take     a filename will have added a call to     PathConverter to their bytecode - Makefile fixes:   - compile everything with -fPIC. This is needed for     AMD64 and newer GCCs/linker complain rightfully   - use CXXFLAGS from Make.config   - introduce EXTRA_CLASSPATH variable to Make.config     for easier configuration of thirdparty jar files

--- a/trunk/Make.config
+++ b/trunk/Make.config
@@ -50,7 +50,7 @@ CC       ?= gcc
 CFLAGS   ?= -g -O2
 
 CXX      ?= g++
-CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual
+CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -fPIC
 
 AR = ar
 ARFLAGS = ru
@@ -157,3 +157,9 @@ VM_CLASSPATH = $(SABLEVM_LIB)/libclasspath.jar:$(SABLEVM_LIB)/resources.jar
 endif
 endif
 
+## EXTRA_CLASSPATH_SEPARATOR can be set as necessary
+## See mhp/java/Makefile how to use this variable, with :=
+EXTRA_CLASSPATH = $(EXTRA_CLASSPATH_PREFIX)/jmf.jar$(EXTRA_CLASSPATH_SEPARATOR)$(EXTRA_CLASSPATH_PREFIX)/asm-2.0.jar
+## Default values, to be adapted as needed.
+EXTRA_CLASSPATH_PREFIX = .
+EXTRA_CLASSPATH_SEPARATOR = :
