Updated documentation for  - switch to SableVM  - note on other VMs  - build from SVN

--- a/trunk/Make.config
+++ b/trunk/Make.config
@@ -21,6 +21,10 @@ DIRECTFB_ROOT = /usr/
 ##or "/usr" if you installed a package from your distributor.
 DFB++_ROOT = /usr/local
 
+
+### ONLY ONE of the following Java implementations is needed!
+### -> Currently it is SableVM, ignore Kaffe
+
 ##The root directory of SableVM
 ##If you have the directories "/usr/lib/sablevm"
 ##and "/usr/lib/sablevm-classpath", the root is "/usr".
