- Change layout of dynamic objects    - introduce libmhpforvdr.so which contains almost everything that was in the plugin binary      and is installed in library dir    - actual plugin only contains mhp.o and links against above libmhpforvdr.so    - subplugins (dynamic binaries loaded by the plugin: output, JNI libs) now link libmhpforvdr.so    - got rid of hack to re-dlopen plugin binary with global availability flag set,      and of cumbersome command yet formerly required line option -L    - change JNI libraries' naming scheme to libmhpjni_* - Build system improvements    - added some variables to simplify Makefiles    - fix grave bug where stale system-wide VDR header where used    - some Makefile fixes - Some remainders from last commit

--- a/trunk/Make.config
+++ b/trunk/Make.config
@@ -2,8 +2,9 @@
 ### Adapt these paths to your system
 ###
 
-##Location of the VDR directory
-VDRDIR = ../../..
+##Location of the VDR directory relative to the 
+##location of Make.config (root directory of the plugin)
+VDRDIR_RELATIVE = ../../..
 
 ##Base directory for files installed by this plugin.
 ##See hierarchy chart below
@@ -54,21 +55,18 @@ CC       ?= gcc
 CFLAGS   ?= -g -O2
 
 CXX      ?= g++
-CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -fPIC
+CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -fPIC -DPIC
 
 AR = ar
 ARFLAGS = ru
 RANLIB = ranlib
 
 
-VDRDIR_RELATIVE = $(VDRDIR)/include/
-PLUGINDIR_RELATIVE = ./
-
 ### Variables for plugin Makefile
 
 ##Defaults from VDRs Make.config
-PLUGINDIR= ./PLUGINS
-PLUGINLIBDIR= $(PLUGINDIR)/lib
+VDR_PLUGINDIR= ./PLUGINS
+VDR_PLUGINLIBDIR= $(PLUGINDIR)/lib
 DVBDIR = ../DVB
 ##if there is a VDR Make.config, include it
 -include $(VDRDIR)/Make.config
@@ -76,6 +74,12 @@ DVBDIR = ../DVB
 LIBDIR = $(VDRDIR)/$(PLUGINLIBDIR)
 temp_DVBDIR := $(DVBDIR)
 DVBDIR = $(VDRDIR)/$(temp_DVBDIR)
+
+##To use VDRDIR in Makefiles, set PLUGINDIR_RELATIVE
+VDRDIR = $(PLUGINDIR_RELATIVE)/$(VDRDIR_RELATIVE)
+VDR_INCLUDES = $(VDRDIR)/include
+PLUGIN_INCLUDES = $(PLUGINDIR_RELATIVE)
+STANDARD_INCLUDE_OPTIONS = -I$(VDR_INCLUDES) -I$(PLUGIN_INCLUDES)
 
 
 ### Installation directories
@@ -102,6 +106,17 @@ MHPJARFILENAME = mhp.jar
 MHPJARFILE = $(MHPJARDIR)/$(MHPJARFILENAME)
 MHPFONTDIR = $(MHPDATADIR)/fonts
 
+##The main library libmhpforvdr.so
+
+MAIN_LIBRARYNAME = mhpforvdr
+MAIN_LIBRARY = lib$(MAIN_LIBRARYNAME).so
+
+## you need to put an -L ../.. in front of this (where ../..) is the path to the plugin's root directory)
+## to link to the main library at compile time
+MAIN_LIBS = -Wl,--rpath=$(MHPLIBDIR) -l$(MAIN_LIBRARYNAME)
+MAIN_LIB_OPTIONS = -L$(PLUGINDIR_RELATIVE) $(MAIN_LIBS)
+
+
 ##this is the only directory here which can be changed by a command line option
 LOCALAPPSDIR = $(BASEDIR)/apps
 
@@ -112,6 +127,17 @@ DIRECTFB_INCLUDES = $(DIRECTFB_ROOT)/include/directfb
 DFB++_INCLUDES = $(DFB++_ROOT)/include/dfb++
 DIRECTFB_INCLUDES_INTERNAL = $(DIRECTFB_ROOT)/include/directfb-internal
 DIRECTFB_VERSION = $(shell $(DIRECTFB_ROOT)/bin/directfb-config --version)
+
+COMPILE_DIRECTFB_BACKEND = YES
+
+### SDL availability
+
+HAVE_SDL = YES
+##HAVE_SDL := $(shell  sdl-config --version && echo YES 2>&1 >/dev/null )
+##ifeq ($(HAVE_SDL),YES)
+##   SDL_LIBS = $(shell sdl-config --libs)
+##   SDL_FLAGS = $(shell sdl-config --cflags)
+##endif
 
 ### Kaffe directories
 
