--- a/trunk/libjava/Makefile
+++ b/trunk/libjava/Makefile
@@ -9,6 +9,7 @@
 ##CXXFLAGS ?= -O2 -g -Wall -Woverloaded-virtual
 
 include ../Make.config
+PLUGINDIR_RELATIVE = ../
 
 
 
@@ -17,8 +18,8 @@ include ../Make.config
 EXTRA_CLASSPATH_PREFIX = $(MHPJARDIR)
 GLOBAL_EXTRA_CLASSPATH := $(EXTRA_CLASSPATH)
 
-INCLUDES += -I../$(VDRDIR)/include -I.. $(VM_INCLUDE_OPTIONS)
-DEFINES  += $(VM_DEFINES) -DPLUGINLIBDIR=\"$(PLUGINLIBDIR)\" \
+INCLUDES += $(VM_INCLUDE_OPTIONS) $(STANDARD_INCLUDE_OPTIONS)
+DEFINES  += $(VM_DEFINES) -DPLUGINLIBDIR=\"$(VDR_PLUGINLIBDIR)\" \
             -DGLOBAL_EXTRA_CLASSPATH=\"$(GLOBAL_EXTRA_CLASSPATH)\" \
             -DMHPJARFILE=\"$(MHPJARFILE)\" -DMHPJARDIR=\"$(MHPJARDIR)\" -DMHPLIBDIR=\"$(MHPLIBDIR)\"
 
