--- a/trunk/libmhpoutput/sdl/Makefile
+++ b/trunk/libmhpoutput/sdl/Makefile
@@ -1,9 +1,10 @@
 
 include ../../Make.config
+PLUGINDIR_RELATIVE = ../..
 
 OBJS  = sdl.o
-INCLUDES = -I$(DFB++_INCLUDES) -I$(DIRECTFB_INCLUDES)  -I../.. -I../../mhp/$(VDRDIR_RELATIVE)
-LIBS = $(DIRECTFB_LIBS)
+INCLUDES = -I$(DFB++_INCLUDES) -I$(DIRECTFB_INCLUDES) $(STANDARD_INCLUDE_OPTIONS)
+LIBS = $(DIRECTFB_LIBS) $(MAIN_LIB_OPTIONS)
 
 
 
