--- a/trunk/libdsmccreceiver/Makefile
+++ b/trunk/libdsmccreceiver/Makefile
@@ -4,13 +4,12 @@
 # $Id$
 
 include ../Make.config
-
-VDRDIR = ../../../..
+PLUGINDIR_RELATIVE = ../
 
 ### The directory environment:
 
 
-INCLUDES += -I$(VDRDIR)/include -I../
+INCLUDES += $(STANDARD_INCLUDE_OPTIONS)
 
 DEFINES += 
 
