--- a/trunk/mhp/native/DirectFB/Makefile
+++ b/trunk/mhp/native/DirectFB/Makefile
@@ -1,5 +1,6 @@
 
 include ../../../Make.config
+PLUGINDIR_RELATIVE = ../../..
 
 OBJS =  \
 	font.o \
@@ -7,17 +8,17 @@ OBJS =  \
 	image.o \
 	window.o \
           
-LIBS = $(PLUGINDIR_RELATIVE)/../../../libxmi/.libs/libxmi.a
+LIBS = $(PLUGINDIR_RELATIVE)/libxmi/.libs/libxmi.a $(MAIN_LIB_OPTIONS)
 
 
-INCLUDES = -I$(DIRECTFB_INCLUDES) $(VM_INCLUDE_OPTIONS) -I$(PLUGINDIR_RELATIVE)/../../../ -I$(PLUGINDIR_RELATIVE)/../../../libxmi -I../../../$(VDRDIR_RELATIVE)
+INCLUDES = -I$(DIRECTFB_INCLUDES) $(VM_INCLUDE_OPTIONS) -I$(PLUGINDIR_RELATIVE)/libxmi $(STANDARD_INCLUDE_OPTIONS)
 
 DEFINES = -DMHPFONTDIR=\"$(MHPFONTDIR)\" -DHAVE_BOOL
 
 %.o: %.c
 	$(CXX) $(CXXFLAGS) -O0 -c $(DEFINES) $(INCLUDES) $<
    
-all: libdirectfbawt.so
+all: libmhpjni_directfbawt.so
 
 # Dependencies:
 
@@ -28,7 +29,7 @@ $(DEPFILE): Makefile
 
 -include $(DEPFILE)
 
-libdirectfbawt.so: $(OBJS)
+libmhpjni_directfbawt.so: $(OBJS)
 	$(CXX) $(CXXFLAGS) -shared $(OBJS) $(LIBS) -o $@
    
 clean:
