- Added Italian translation (Giampiero Giancipoli) - fixed some confused variables in Make.config resulting in the plugin binary copied to the wrong location - fix for DirectFB 0.9.21 (Giampiero Giancipoli)

--- a/trunk/Make.config
+++ b/trunk/Make.config
@@ -64,22 +64,25 @@ RANLIB = ranlib
 
 ### Variables for plugin Makefile
 
-##Defaults from VDRs Make.config
-VDR_PLUGINDIR= ./PLUGINS
-VDR_PLUGINLIBDIR= $(PLUGINDIR)/lib
-DVBDIR = ../DVB
 ##if there is a VDR Make.config, include it
+##it is not required to be present, and might define PLUGINDIR, PLUGINLIBDIR, DVBDIR and VIDEODIR
 -include $(VDRDIR)/Make.config
+##Defaults from VDRs Make.config
+PLUGINDIR ?= ./PLUGINS
+PLUGINLIBDIR ?= $(PLUGINDIR)/lib
+DVBDIR ?= ../DVB
+VIDEODIR ?= /video
 ##now construct variables for the plugin Makefile
-LIBDIR = $(VDRDIR)/$(PLUGINLIBDIR)
-temp_DVBDIR := $(DVBDIR)
-DVBDIR = $(VDRDIR)/$(temp_DVBDIR)
+VDR_PLUGINLIBDIR = $(VDRDIR)/$(PLUGINLIBDIR)
+VDR_DVBDIR = $(VDRDIR)/$(DVBDIR)
 
 ##To use VDRDIR in Makefiles, set PLUGINDIR_RELATIVE
 VDRDIR = $(PLUGINDIR_RELATIVE)/$(VDRDIR_RELATIVE)
 VDR_INCLUDES = $(VDRDIR)/include
 PLUGIN_INCLUDES = $(PLUGINDIR_RELATIVE)
-STANDARD_INCLUDE_OPTIONS = -I$(VDR_INCLUDES) -I$(PLUGIN_INCLUDES)
+DVB_INCLUDES = $(VDR_DVBDIR)/include
+   ##DVB includes are not necessary for Kernel 2.6
+STANDARD_INCLUDE_OPTIONS = -I$(VDR_INCLUDES) -I$(PLUGIN_INCLUDES) -I$(DVB_INCLUDES)
 
 
 ### Installation directories
