--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -57,7 +57,7 @@ PACKAGE = vdr-$(ARCHIVE)
 
 ### Includes and Defines (add further entries here):
 
-INCLUDES += $(STANDARD_INCLUDE_OPTIONS) -I$(DVBDIR)/include -I$(DIRECTFB_INCLUDES) $(VM_INCLUDE_OPTIONS)
+INCLUDES += $(STANDARD_INCLUDE_OPTIONS) -I$(DIRECTFB_INCLUDES) $(VM_INCLUDE_OPTIONS)
 
 DEFINES += -DPLUGIN_NAME_I18N='"$(PLUGIN)"' -DBASEDIR='"$(BASEDIR)"' -DLOCALAPPSDIR='"$(LOCALAPPSDIR)"' \
            -DMHPDIR='"$(MHPDIR)"' -DPLUGINLIBDIR=\"$(VDR_PLUGINLIBDIR)\"
@@ -112,7 +112,7 @@ jai: java all install
 
 libvdr-$(PLUGIN).so: $(MAIN_LIBRARY) $(OBJS_PLUGIN)
 	$(CXX) $(CXXFLAGS) -shared $(OBJS_PLUGIN) $(LIBS_PLUGIN) -o $@
-	@cp $@ $(LIBDIR)/$@.$(VDRVERSION)
+	@cp $@ $(VDR_PLUGINLIBDIR)/$@.$(VDRVERSION)
 	
 $(MAIN_LIBRARY): subdirs $(OBJS_LIBRARY)
 	$(CXX) $(CXXFLAGS) -shared -export-dynamic $(OBJS_LIBRARY) $(LIBS_LIBRARY) -o $@
