- Updated README: command line option no longer necessary,   down to four steps for installation :-) - Added documentation of dynamic library layout to README.DEVELOPER

--- a/trunk/mhp/java/Makefile
+++ b/trunk/mhp/java/Makefile
@@ -20,7 +20,7 @@ INSTALL_EXTRA_CLASSPATH := $(EXTRA_CLASSPATH)
 
 ## for getjikes
 EXTRA_CLASSPATH_SEPARATOR = :
-EXTRA_CLASSPATH_PREFIX = mhp/java
+EXTRA_CLASSPATH_PREFIX = mhp/java/thirdparty
 TOPDIR_EXTRA_CLASSPATH := $(EXTRA_CLASSPATH)
 
 
