- Change in naming scheme: Introduced Mhp namespace,   MhpLoadingManager -> Mhp::LoadingManager, MhpControl -> Mhp::Control   for all classes in mhpcontrol.c - Changes in mhpcontrol.c:   - Added Mhp::RunningManager to take over starting applications from     ApplicationMenu and quitting when last application stops   - Added notion of a foreground application (the one started from ApplicationMenu)   - Added user notification when an application has already been started   - Now only abstract base classes in mhploading.h (RunningManager, LoadingManager),     implementations (ControlRunning-/LoadingManager) in mhpcontrol.h.     Moved implementation of LoadingManager parts to this header.   - fixed Mhp::ChannelWatch, it should not access the list for transport streams     which are known to contain applications, because for the first time a TS     in principally not in this list - Work on ApplicationManager:   - Added native interface to the new Mhp::RunningManager to notify     for start and stop of applications   - Some fixes in ApplicationTask code to handle state changes originating     from code called by the worker thread (and the Execute function) itself   - ecapsulated the way AppStateChangeEvents are created - Fixes in cDsmccReceiver:   - fixed silly bug which prevented loading, forgot to increment iterator in loop   - Disabled compilation for VDR <= 1.3.27. 1.3.28 fixes bug in VDR's     cChannel copy constructor. This bug would make cFilter::Channel return bogus data     and cDsmccReceiver think it on on the wrong transponder - Cleaned up mhp.c - fixes to make SmartPtr usable in a std::map - Added get'ters to TransportStreamID for convenience

--- a/trunk/Make.config
+++ b/trunk/Make.config
@@ -51,11 +51,14 @@ KAFFE_DIR = /usr/local/kaffe
 
 ### The C compiler and options:
 
+##Specify "OPTLEVEL=0 make" to get better bt's with gdb
+OPTLEVEL ?= 2
+
 CC       ?= gcc
-CFLAGS   ?= -g -O2
+CFLAGS   ?= -g -O$(OPTLEVEL)
 
 CXX      ?= g++
-CXXFLAGS ?= -g -O2 -Wall -Woverloaded-virtual -fPIC -DPIC
+CXXFLAGS ?= -g -O$(OPTLEVEL) -Wall -Woverloaded-virtual -fPIC -DPIC
 
 AR = ar
 ARFLAGS = ru
