- fixed DFBDataBuffer, MHPImageConsumer, MHPImageDecoder - fixed native implementation of MHPNativeGraphics, package change - removed JNI_COMMIT in Release<>Array JNI calls, 0 is the correct argument - cleaned up code, grouped native methods to top of files(MHPNativeGraphics, DFBWindowPeer) - complete handling of DirectFB window events, tranlation to AWT events - MHPPlane now extends Frame instead of Window, necessary because AWT   assumes only Frames are top-level - added clarifying comment on ASM java.io bytecode manipulation in DVBClassLoader - fixed a deadlock in Mhp::Control deletion

--- a/branches/awt_from_classpath/mhp/native/vdr/Makefile
+++ b/branches/awt_from_classpath/mhp/native/vdr/Makefile
@@ -11,14 +11,13 @@ OBJS =  \
 	storage.o
    
 LIBS = $(MAIN_LIB_OPTIONS)
-#CXXFLAGS += -O0
 
 CXXFLAGS += -DMHPLIBDIR=\"$(MHPLIBDIR)\" -DMHPDATADIR=\"$(MHPDATADIR)\" -DMHPFONTDIR=\"$(MHPFONTDIR)\" 
 
 INCLUDES = $(VM_INCLUDE_OPTIONS) $(STANDARD_INCLUDE_OPTIONS)
 
 %.o: %.c
-	$(CXX) $(CXXFLAGS) -w -c $(DEFINES) $(INCLUDES) $<
+	$(CXX) $(CXXFLAGS) -c $(DEFINES) $(INCLUDES) $<
    
 all: libmhpjni_dvb.so
 
