--- a/branches/awt_from_classpath/mhp/native/DirectFB/Makefile
+++ b/branches/awt_from_classpath/mhp/native/DirectFB/Makefile
@@ -16,7 +16,7 @@ INCLUDES = -I$(DIRECTFB_INCLUDES) $(VM_INCLUDE_OPTIONS) -I$(PLUGINDIR_RELATIVE)/
 DEFINES = -DMHPFONTDIR=\"$(MHPFONTDIR)\" -DHAVE_BOOL
 
 %.o: %.c
-	$(CXX) $(CXXFLAGS) -O0 -c $(DEFINES) $(INCLUDES) $<
+	$(CXX) $(CXXFLAGS) -c $(DEFINES) $(INCLUDES) $<
    
 all: libmhpjni_directfbawt.so
 
