- added MHPBackgroundLayer to use functionality of IDirectFBDisplayLayer to draw background   instead of emulating this with an extra window at the bottom of the stack, MHPBackgroundPlane - fixed sending of Window-, Mouse and KeyEvent in DFBWindowPeer - fixed generation of KeyEvents with proper keyIds in DFBWindowPeer and keyChar in VDREventDispatcher - fixed usage of negative coordinate arguments in graphics code

--- a/branches/awt_from_classpath/Makefile
+++ b/branches/awt_from_classpath/Makefile
@@ -198,8 +198,9 @@ plugin-clean:
    
 testapps-install:
 	@install -d $(BASEDIR)/apps
+	@echo Copying content of ./testapps to $(BASEDIR)/apps
 	@( cd testapps; \
-	  find -not -path "*.svn*" -and -not -type d -and -not -name "*.java" -exec cp -av --parents "{}" $(BASEDIR)/apps \; \
+	  find -not -path "*.svn*" -and -not -type d -and -not -name "*.java" -exec cp -a --parents "{}" $(BASEDIR)/apps \; \
 	)
 
 ##Do not delete testapps in distclean, include .class files in distribution
