- Added local copy of DFB++. Reasons:   - in the call to CreateDataBuffer, DFB++ would not allow to create     a streaming buffer because it uses a reference. This is not fixed in CVS,     and I doubt it will be soon.   - DFB++ would not allow to work on an IDirectFB interface created with the     C API. This change is trivial as well, but important.   - DFB++ is not packed by any distribution as far as I know, not even by Gentoo.     This means users will have to download and compile it manually.   - DFB++ is only a thin wrapper. No need to expect any important fixes.   - It is easy to take care of API additions with ifdefs. Supporting 0.9.21 and 0.9.22. - Now using streaming buffer in for MHPDataBuffer - Dropped supportt for DirectFB 0.9.20. Even the current version 0.9.22 is out for a long time.

--- a/branches/awt_from_classpath/Make.config
+++ b/branches/awt_from_classpath/Make.config
@@ -17,12 +17,6 @@ BASEDIR    = /usr/local/vdr
 ##DIRECTFB_ROOT = /usr/local
 DIRECTFB_ROOT = /usr/
 
-##The directory prefix of DFB++. 
-##This is usually "/usr/local" if you compiled from source,
-##or "/usr" if you installed a package from your distributor.
-DFB++_ROOT = /usr/local
-
-
 ### ONLY ONE of the following Java implementations is needed!
 ### -> Currently it is SableVM, ignore Kaffe
 
@@ -130,9 +124,9 @@ LOCALAPPSDIR = $(BASEDIR)/apps
 
 DIRECTFB_LIBS = -ldirectfb
 DIRECTFB_INCLUDES = $(DIRECTFB_ROOT)/include/directfb
-DFB++_INCLUDES = $(DFB++_ROOT)/include/dfb++
 DIRECTFB_INCLUDES_INTERNAL = $(DIRECTFB_ROOT)/include/directfb-internal
 DIRECTFB_VERSION = $(shell $(DIRECTFB_ROOT)/bin/directfb-config --version)
+DFB++_INCLUDES = $(PLUGINDIR_RELATIVE)/dfb++/include
 
 COMPILE_DIRECTFB_BACKEND = YES
 
