- added simple org.dvb.net.rc implementation - added new Service API in libservice which abstracts service handling   to a more object-oriented and clearly defined level - ported most of the code to new API, libdvbsi still missing - fixed some bugs in applicationmenu and carousel loading

--- a/trunk/libservice/Makefile
+++ b/trunk/libservice/Makefile
@@ -18,7 +18,7 @@ LIBS +=
 
 ### The object files (add further files here):
 
-OBJS = servicecontext.o
+OBJS = servicecontext.o service.o
 
 ### Implicit rules:
 
