- libservice   - several fixes, extensions and refinements of the API   - added Service::TransportStreamFilter which provides infrastructure     to bind a cFilter to a transport stream - libdvbsi:   - ported to Service API, in particular Service::Tuner and ServiceListener::TransportStreamChange   - removed a lot of now obsolete code, functionality (code) was moved to libservice   - added TimeScheduleEventRequest, TimeScheduleEventTableRequest and some necessary infrastructure     for segmented tables, ActualNetworkRequest, and some optimizations for most FilterRequests     (adding only necessary filter data, actual/other distinction)   - added some missing IDs (such as ONID where only TID-SID was provided) to retrieve methods or constructors   - removed switchMutex which was bad and has become unnecessary   - IdTracker now interface with two implementations, the "include all" option is now represented by a NULL pointer   - ported DvbSi::Filter to new Service::TransportStreamFilter infrastructure   - fixed long standing crash in CleanUp and ~Database   - rearranged filter shutdown mechanisms in requestutil.c - libait:   - ported to new Service API - libdsmccreceiver:   - ported cDsmccReceiver to new Service::TransportStreamFilter infrastructure - libjava JNI interface:   - throwing illegal state exception if Method or Field objects are used uninitialized
- org.dvb.si and si.c:
  - ported to NativeData and JNI::String
  - ported to new Service API
  - added initialization code to SIDatabase following the ListBuilder pattern
  - added checks for REtrieveMode and throw SIIllegalARgumentExcpetion if necessary
  - added correct throws clauses to interface definitions and implementation classes
  - differentiate between TODOs and javax-TODOs for the javax.tv API on org.dvb.si objects
  - added support for new TimeScheduleEventRequest and ActualNetworkRequest
  - removed expensive dispatching code from SIManager.java
- javax.tv.service and service.c:
  Added a much more com

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -228,7 +228,7 @@ plugin-clean:
    
 testapps-install:
 	@install -d $(BASEDIR)/apps
-	@echo Copying content of ./testapps to $(BASEDIR)/apps
+	@echo Copying ./testapps/ to $(BASEDIR)/apps
 	@( cd testapps; \
 	  find -not -path "*.svn*" -and -not -type d -and -not -name "*.java" -exec cp -a --parents "{}" $(BASEDIR)/apps \; \
 	)
